fix: change question audioblock size on small desk and desk screens

--- a/assets/styles/blocks/_question.scss
+++ b/assets/styles/blocks/_question.scss
@@ -51,14 +51,6 @@
 @media (min-width: $small-desk) {
   .question {
     &__player-block {
-      width: 70%;
-    }
-  }
-}
-
-@media (min-width: $desk) {
-  .question {
-    &__player-block {
       width: 76%;
     }
   }
